apps/treelink/base/treelink/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: treelink
  namespace: treelink
spec:
  selector:
    app: treelink
  ports:
    - name: http
      port: 3000
      targetPort: http
